--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta property="og:image" content="https://repository-images.githubusercontent.com/201278805/8907cc00-b9cb-11e9-9b7f-ac2f644c752a">
-	<link rel="image_src" href="https://repository-images.githubusercontent.com/201278805/8907cc00-b9cb-11e9-9b7f-ac2f644c752a">
+	<!--<meta property="og:image" content="https://repository-images.githubusercontent.com/201278805/8907cc00-b9cb-11e9-9b7f-ac2f644c752a">
+	<link rel="image_src" href="https://repository-images.githubusercontent.com/201278805/8907cc00-b9cb-11e9-9b7f-ac2f644c752a">-->
     <meta charset="utf-8" />
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>D&D 5e referencia rápida</title>
+    <title>D&D Referencia Hechizos</title>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="css/quickref.css">
     <link rel="stylesheet" type="text/css" href="css/icons.css">
